smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply-missing-trait-value.smithy
// Parse error at line 5, column 1 near `string`: Expected ANNOTATION
namespace com.foo

apply SomeShape
string MyString
